server/src/analysis/peg/snapshots/janet_zed_server__analysis__peg__tests__grammar_struct_with_aliases.snap
---
source: server/src/analysis/peg/tests.rs
assertion_line: 36
expression: "(peg/find ~{:main (* (<- :d) (? \"-\") (quote :w))} s)"
---
----- SOURCE CODE
(peg/find ~{:main (* (<- :d) (? "-") (quote :w))} s)

----- PEG SPECIALS
(peg/find ~{:main (* (<- :d) (? "-") (quote :w))} s)
                   ▔  ▔▔      ▔       ▔▔▔▔▔
