server/src/analysis/peg/snapshots/janet_zed_server__analysis__peg__tests__only_the_pattern_argument.snap
---
source: server/src/analysis/peg/tests.rs
assertion_line: 51
expression: "(peg/replace-all '(set \"ab\") '(any 1) s)"
---
----- SOURCE CODE
(peg/replace-all '(set "ab") '(any 1) s)

----- PEG SPECIALS
(peg/replace-all '(set "ab") '(any 1) s)
                   ▔▔▔
