server/src/analysis/peg/snapshots/janet_zed_server__analysis__peg__tests__symbols_that_head_no_special.snap
---
source: server/src/analysis/peg/tests.rs
assertion_line: 61
expression: (peg/match ~(some any (frobnicate 1)) s)
---
----- SOURCE CODE
(peg/match ~(some any (frobnicate 1)) s)

----- PEG SPECIALS
(peg/match ~(some any (frobnicate 1)) s)
             ▔▔▔▔
