server/src/analysis/peg/snapshots/janet_zed_server__analysis__peg__tests__unquoted_struct_with_quoted_rules.snap
---
source: server/src/analysis/peg/tests.rs
assertion_line: 41
expression: "(peg/match {:main '(some \"a\")} s)"
---
----- SOURCE CODE
(peg/match {:main '(some "a")} s)

----- PEG SPECIALS
(peg/match {:main '(some "a")} s)
                    ▔▔▔▔
